@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    # fireStrategy:FireStrategy
    # direction:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + setFireStrategy(FireStrategy fireStrategy):void
    + executeStrategy(AbstractAircraft abstractAircraft):List<AbstractBullet>
    + getSpeedX():int
 }

abstract class AbstractBullet
{
    - power:int
    + AbstractBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

abstract class AbstractProp
{
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
    + forward():void
}

class HeroAircraft {
    - heroAircraft:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + increaseHp(int increase):void
    + getSingleton():HeroAircraft
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}

class EliteEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}

class Boss {
    + Boss(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class BloodSupplyProp {
    - hp:int
    + BloodSupplyProp(int locationX, int locationY, int speedX, int speedY)
    + increaseHp(HeroAircraft heroAircraft):void
}

class FireSupplyProp {
    - propStrategy:PropStrategy
    + FireSupplyProp(int locationX, int locationY, int speedX, int speedY)
    + setPropStrategy(PropStrategy propStrategy):void
    + executeStrategy(HeroAircraft heroAircraft):void
}

class BombSupplyProp {
    - objects:List<AbstractFlyingObject>
    + BombSupplyProp(int locationX, int locationY, int speedX, int speedY)
    + addEnemy(AbstractFlyingObject object):void
    + notifyAllEnemy():void
    + executeBombSupply():void
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- AbstractBullet
AbstractFlyingObject <|-- AbstractProp

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- Boss

AbstractBullet <|-- HeroBullet
AbstractBullet <|-- EnemyBullet

AbstractProp <|-- BloodSupplyProp
AbstractProp <|-- FireSupplyProp
AbstractProp <|-- BombSupplyProp

@enduml